[package]
name = "certain-certificate"
version = "0.1.0"
authors = ["André Storfjord Kristiansen"]
description = "High level certificate wrapper."
repository = "https://github.com/dev-bio/certain-certificate"
homepage = "https://github.com/dev-bio/certain-certificate"
readme = "README.md"
license = "MIT"
edition = "2021"

exclude = [

    ".devcontainer/**",
    ".cargo/**",
    "/assets/**",
]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
x509-parser = "0.14.0"
