[package]
name = "certain-certificate"
version = "0.1.1"
authors = ["André Storfjord Kristiansen"]
description = "High level certificate wrapper."
repository = "https://github.com/dev-bio/certain-certificate"
homepage = "https://github.com/dev-bio/certain-certificate"
readme = "README.md"
license = "MIT"
edition = "2021"

exclude = [

    ".devcontainer/**",
    ".github/**",
    ".cargo/**",
]

[dependencies]
webpki-roots = { version = "0.22.6" }
webpki = { version = "0.22.0" }
x509-parser = { version = "0.15.0" }
rustls-native-certs = { version = "0.6.2" }
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }